--- a/src/components/progress/progress.sandbox.html
+++ b/src/components/progress/progress.sandbox.html
@@ -61,7 +61,7 @@
         <m-progress value="50" state="error" :circle="true"></m-progress>
     </p>
     <h3>Progress Bar no state (value commands state)</h3>
-    <p class="m-u--margin-bottom">Progress bar in normal mode and circle mode, 100%</p>
+    <p class="m-u--margin-bottom">Progress bar in normal mode, differents value</p>
     <p>
         <m-progress value="0"></m-progress>
     </p>
