MODUL-286 - Update accordion styles

--- a/src/components/accordion/accordion.sandbox.html
+++ b/src/components/accordion/accordion.sandbox.html
@@ -53,25 +53,36 @@
     </m-accordion>
     <br>
     <br>
-    <hr>
 
     <h2>Border-top</h2>
     <p>
         when open, hide border-top on the next accordion
     </p>
+    <m-accordion>
+        <div slot="header">Accordion title</div>
+        <p class="m-u--no-margin">Accordion content</p>
+    </m-accordion>
+    <m-accordion>
+        <div slot="header">Accordion title</div>
+        <p class="m-u--no-margin">Accordion content</p>
+    </m-accordion>
+    <m-accordion>
+        <div slot="header">Accordion title</div>
+        <p class="m-u--no-margin">Accordion content</p>
+    </m-accordion>
     <br>
     <m-accordion icon-position="right" skin="dark">
-        <div slot="header">Accordion title</div>
-        <p class="m-u--no-margin">Accordion content</p>
-    </m-accordion>
-    <m-accordion icon-position="right" skin="dark">
-        <div slot="header">Accordion title</div>
-        <p class="m-u--no-margin">Accordion content</p>
-    </m-accordion>
-    <m-accordion icon-position="right" skin="dark">
-        <div slot="header">Accordion title</div>
-        <p class="m-u--no-margin">Accordion content</p>
-    </m-accordion>
+            <div slot="header">Accordion title</div>
+            <p class="m-u--no-margin">Accordion content</p>
+        </m-accordion>
+        <m-accordion icon-position="right" skin="dark">
+            <div slot="header">Accordion title</div>
+            <p class="m-u--no-margin">Accordion content</p>
+        </m-accordion>
+        <m-accordion icon-position="right" skin="dark">
+            <div slot="header">Accordion title</div>
+            <p class="m-u--no-margin">Accordion content</p>
+        </m-accordion>
 
     <h2>Heading</h2>
     <p>
