--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -152,6 +152,22 @@ $m-radio--color-disabled: $m-color--disabled !default;
             }
         }
 
+        &.m--is-align-center {
+            .m-radio__wrap {
+                align-items: center;
+            }
+        }
+
+        &:not(.m--is-align-center) {
+            .m-radio__wrap {
+                align-items: flex-start;
+            }
+
+            .m-radio__input {
+                margin-top: 2px; // Magic number
+            }
+        }
+
         .m-radio {
             &__wrap {
                 display: inline-flex;
@@ -325,6 +341,22 @@ $m-radio--color-disabled: $m-color--disabled !default;
             flex: 1;
         }
 
+        &.m--is-align-center {
+            .m-radio__wrap {
+                align-items: center;
+            }
+        }
+
+        &:not(.m--is-align-center) {
+            .m-radio__wrap {
+                align-items: flex-start;
+            }
+
+            .m-radio__input {
+                margin-top: 2px; // Magic number
+            }
+        }
+
         .m-radio {
             &__wrap,
             &__label {
@@ -334,7 +366,6 @@ $m-radio--color-disabled: $m-color--disabled !default;
 
             &__wrap {
                 display: inline-flex;
-                align-items: center;
                 text-align: center;
                 justify-content: center;
                 vertical-align: middle;
