MODUL-298 - Update sandbox and animation

--- a/src/components/menu-item/menu-item.html
+++ b/src/components/menu-item/menu-item.html
@@ -5,7 +5,7 @@
              'm--is-group': group,
              'm--is-open': propOpen,
              'm--is-inside-group' : menuItiemGroupRoot,
-             'm--is-anim-ready': animReady}"
+             'm--is-anim-ready': isAnimReady}"
     role="none">
     <router-link class="m-menu-item__link"
                  :to="url"
