--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -37,7 +37,7 @@
         <m-menu-item value="item3" label="item 3">
         </m-menu-item>
         <m-menu-item label="Subitem header">
-            <m-menu-item value="subitem1" label="subitem 1">
+            <m-menu-item icon-name="m-svg__clock" value="subitem1" label="subitem 1">
             </m-menu-item>
             <m-menu-item value="subitem2" label="subitem 2">
             </m-menu-item>
@@ -47,11 +47,11 @@
         <m-menu-item value="item5" label="item 5">
         </m-menu-item>
         <m-menu-item label="Subitem header">
-            <m-menu-item value="subitem5" label="subitem 1">
+            <m-menu-item value="subitem4" label="subitem 4">
             </m-menu-item>
-            <m-menu-item value="subitem6" label="subitem 2">
+            <m-menu-item value="subitem5" label="subitem 5">
             </m-menu-item>
-            <m-menu-item value="subitem7" label="subitem 3">
+            <m-menu-item value="subitem6" label="subitem 6">
             </m-menu-item>
         </m-menu-item>
     </m-menu>
