--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -4,58 +4,66 @@
         <div slot="trigger">
             Menu
         </div>
-        <m-menu-item value="item1" label="item 1" icon-name="m-svg__profile">
+        <m-menu-item value="item1" label="Item 1" icon-name="m-svg__profile">
         </m-menu-item>
-        <m-menu-item value="item2" label="item 2">
+        <m-menu-item value="item2" label="Item 2">
         </m-menu-item>
-        <m-menu-item value="item3" label="item 3">
+        <m-menu-item value="item3" label="Item 3">
         </m-menu-item>
         <m-menu-item label="Subitem header">
-            <m-menu-item value="subitem1" label="subitem 1">
+            <m-menu-item value="subitem1" label="Subitem 1">
             </m-menu-item>
-            <m-menu-item value="subitem2" label="subitem 2">
+            <m-menu-item value="subitem2" label="Subitem 2">
             </m-menu-item>
-            <m-menu-item value="subitem3" label="subitem 3">
+            <m-menu-item value="subitem3" label="Subitem 3">
             </m-menu-item>
         </m-menu-item>
-        <m-menu-item value="item5" label="item 5">
+        <m-menu-item value="item5" label="Item 5">
         </m-menu-item>
     </m-menu>
     <m-button class="m-u--margin-top" @click="changeModel">Change model</m-button>
     <m-button class="m-u--margin-top" @click="toggleDarkSkin">Toggle dark menu</m-button>
-    <p>Selected item : {{ selectedItem }}<p>
+    <p>Selected item : {{ selectedItem }}</p>
 
     <h2>Skin light</h2>
     <m-menu class="m-u--margin-top" :selected.sync="selectedItemLight" skin="light"  :open="openLightSkin">
         <div slot="trigger">
             Menu
         </div>
-        <m-menu-item value="item1" label="item 1" icon-name="m-svg__profile">
+        <m-menu-item value="item1" label="Item 1" icon-name="m-svg__profile">
         </m-menu-item>
-        <m-menu-item value="item2" label="item 2">
+        <m-menu-item value="item2" label="Item 2">
         </m-menu-item>
-        <m-menu-item value="item3" label="item 3">
+        <m-menu-item value="item3" label="Item 3">
         </m-menu-item>
-        <m-menu-item label="Subitem header">
-            <m-menu-item icon-name="m-svg__clock" value="subitem1" label="subitem 1">
+        <m-menu-item label="Item group 1">
+            <m-menu-item icon-name="m-svg__clock" value="subitem1" label="Subitem 1">
             </m-menu-item>
-            <m-menu-item value="subitem2" label="subitem 2">
+            <m-menu-item value="subitem2" label="Subitem 2">
             </m-menu-item>
-            <m-menu-item value="subitem3" label="subitem 3">
+            <m-menu-item value="subitem3" label="Subitem 3">
             </m-menu-item>
         </m-menu-item>
-        <m-menu-item value="item5" label="item 5">
+        <m-menu-item value="item5" label="Item 5">
         </m-menu-item>
-        <m-menu-item label="Subitem header">
-            <m-menu-item value="subitem4" label="subitem 4">
+        <m-menu-item label="Item group 2">
+            <m-menu-item value="subitem4" label="Subitem 4">
             </m-menu-item>
-            <m-menu-item value="subitem5" label="subitem 5">
+            <m-menu-item value="subitem5" label="Subitem 5">
             </m-menu-item>
-            <m-menu-item value="subitem6" label="subitem 6">
+            <m-menu-item value="subitem6" label="Subitem 6">
+            </m-menu-item>
+        </m-menu-item>
+        <m-menu-item label="Item group 3">
+            <m-menu-item value="subitem7" label="Subitem 7">
+            </m-menu-item>
+            <m-menu-item value="subitem8" label="Subitem 8">
+            </m-menu-item>
+            <m-menu-item value="subitem9" label="Subitem 9">
             </m-menu-item>
         </m-menu-item>
     </m-menu>
     <m-button class="m-u--margin-top" @click="changeModel">Change model</m-button>
     <m-button class="m-u--margin-top" @click="toggleLightSkin">Toggle light menu</m-button>
-    <p>Selected item : {{ selectedItemLight }}<p></p>
+    <p>Selected item : {{ selectedItemLight }}</p>
 </div>
