--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     user-select: none;
 
-    &__header {
+    &__trigger {
         transition: color $m-transition-duration ease, font-weight $m-transition-duration ease;
         position: relative;
         z-index: 2;
