MODUL-298 - Add aria-selected to menu-item

--- a/src/components/menu-item/menu-item.html
+++ b/src/components/menu-item/menu-item.html
@@ -21,6 +21,7 @@
           @click="onClick"
           @keypress.enter="onClick"
           :tabindex="isDisabled ? '-1' : '0'"
+          :aria-selected="selected"
           :aria-haspopup="group"
           :aria-controls="group ? ariaControls : undefined"
           :aria-expanded="group ? propOpen : undefined"
